<resources>
    <string name="app_name">ApkSticker</string>
    <string name="active_dialog">Activate Kika Keyboard to unlock %s</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_agree">AGREE AND CONTINUE</string>
    <string name="privacy_policy_content">To improve your using experience, $s needs to collect necessary data. Please accept our privacy policy to continue to use our service. For the details, please refer to Privacy Policy.</string>

    <string name="wa_dialog_content">Your WhatsApp version is not latest version, please update first.</string>

    <string name="tray_image_content_description">Sticker Pack Tray Image</string>
    <string name="more_info_button">More info about sticker pack</string>
    <string name="add_to_whatsapp">Add to WhatsApp</string>
    <string name="add_button_content_description">Add sticker pack to WhatsApp</string>
    <string name="title_activity_sticker_packs_list">WA Sticker Store</string>
    <string name="dot">•</string>
    <string name="title_activity_sticker_pack_details_single_pack">Sticker Pack</string>
    <string name="title_activity_sticker_pack_details_multiple_pack">Sticker details</string>
    <string name="title_activity_sticker_pack_info">Info</string>
    <string name="view_webpage">View webpage</string>
    <string name="send_email">Send email</string>
    <string name="error_adding_sticker_pack">Could not add this sticker pack. Please install the latest version of WhatsApp before adding sticker pack</string>
    <string name="error_message">Error: %s \nSee logcat for stack trace.</string>
    <string name="title_validation_error">Error with the pack</string>
    <string name="info_screen_tray_icon">Tray icon</string>
    <string name="details_pack_already_added">Sticker pack added to WhatsApp</string>
    <string name="info_send_email_to_prompt">Send email with</string>
    <string name="add_pack_fail_prompt_update_whatsapp">Sticker pack not added. If you\'d like to add it, make sure you update to the latest version of WhatsApp.</string>
    <string name="add_pack_fail_prompt_update_play_link">Update</string>
    <string name="cannot_find_play_store">Google Play is not installed on the device.</string>

    <string name="no_net">No Internet Connection</string>
    <string name="accessibility_desc">gifcommunity</string>
    <string name="no_content">No GIFs Found</string>

    <string name="wa_version_not_support">Your whatsapp version is not latest version，please update first</string>
    <string name="string_update">Update</string>
    <string name="string_not_now">Not now</string>
    <string name="publish_and_add_to_whatsapp">Publish to WhatsApp</string>

    <string name="create_new_stickpack">Create New Stickerspack</string>
    <string name="create_pack_dialog_name_hint">Stickers Pack name</string>
    <string name="create_pack_dialog_author_hint">Stickers Pack author</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_from_album">Select from Albums</string>


    <string name="string_create">Create</string>
    <string name="string_cancel">Cancel</string>
    <string name="pack_item_edit">EDIT</string>
    <string name="string_ok">OK</string>
    <string name="string_next">Next</string>
    <string name="string_done">Done</string>
    <string name="string_brush">Brush</string>
    <string name="string_size">Size</string>
    <string name="string_color">Color</string>
    <string name="tab_draw">Draw</string>
    <string name="tab_text">Text</string>
    <string name="tab_erase">Erase</string>
    <string name="tab_restore">Restore</string>
    <string name="pack_item_add">ADD</string>

    <string name="string_borders">Borders</string>
    <string name="default_text_tool_hint">add text</string>

    <string name="add_change_to_whatsapp">Add Changes to WhatsApp</string>
    <string name="enter_phone_album">Enter Phone Album</string>
    <string name="launch_camera">Camera</string>
    <string name="invalid_pack_string">You need to have at least 3 stickers and 1 icon in your pack before you can publish</string>
    <string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait</string>
    <string name="crop__pick_error">No image sources available</string>
    <string name="crop__done">DONE</string>
    <string name="crop__cancel">CANCEL</string>
</resources>
