<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/kika_sticker_app_bg_dialog_02"
    android:paddingBottom="20dp"
    android:paddingTop="15dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="19dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/aciv_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/privacy_policy"
                android:textColor="#262626"
                android:textStyle="bold"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="19dp"
            android:layout_marginTop="10dp"
            android:text="@string/privacy_policy_content"
            android:textColor="#666666"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btn_agree"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="19dp"
            android:textStyle="bold"
            android:layout_marginRight="19dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:background="@drawable/kika_sticker_app_bt_green"
            android:text="@string/privacy_policy_agree"
            android:textSize="14sp"
            android:textColor="#ffffff" />

    </LinearLayout>
</FrameLayout>