<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:gravity="center_vertical"
            android:text="@string/create_new_stickpack"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/expend"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:scaleType="center"
                android:src="@drawable/ic_more" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/stickerpack"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_toLeftOf="@id/expend"
                android:singleLine="true"
                android:textSize="17sp"
                android:hint="@string/create_pack_dialog_name_hint"
                android:fontFamily="sans-serif" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/stickerpack_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/stickerpack"
                android:layout_alignEnd="@id/stickerpack"
                android:textColor="@color/create_pack_dialog_count_color"
                android:textSize="12sp"
                android:fontFamily="sans-serif-medium"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/author_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:singleLine="true"
                android:textSize="17sp"
                android:hint="@string/create_pack_dialog_author_hint"
                android:fontFamily="sans-serif" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/author_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/author"
                android:layout_alignEnd="@id/author"
                android:textColor="@color/create_pack_dialog_count_color"
                android:textSize="12sp"
                android:fontFamily="sans-serif-medium"/>

            <ImageView
                android:id="@+id/clear_author"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:scaleType="center"
                android:src="@drawable/ic_text_delete" />
        </RelativeLayout>

    </LinearLayout>
</FrameLayout>